Bug 345488 - transform from path not applied to textPath.  r=longson, sr=roc