layout/svg/base/src/nsSVGTextPathFrame.h
@@ -87,6 +87,9 @@ public:
   nsSVGFlattenedPath *GetFlattenedPath();
   nsIFrame *GetPathFrame();
 
+  // nsSVGContainerFrame methods:
+  virtual already_AddRefed<nsIDOMSVGMatrix> GetCanvasTM();
+
    // nsISupports interface:
   NS_IMETHOD QueryInterface(const nsIID& aIID, void** aInstancePtr);
 
